animaciones para tareas completadas y para eliminar tarea: completo

--- a/index.html
+++ b/index.html
@@ -46,25 +46,24 @@
                 <tbody>
                     <tr>
                         <td>
-                            <div class="tarea">
-                                <div class="descripcion-tarea">
-                                    descripcion tarea
-                                </div>
+                            <div class="tarea" id="tarea1014">
+                                <div class="descripcion-tarea">descripcion tarea uno</div>
                                 <div class="btns-tarea">  
-                                    <button title="Marcar como completada"><i class="fas fa-check"></i></button>
-                                    <button title="Eliminar tarea"><i class="fas fa-times"></i></button>
+                                    <button title="Marcar como completada"><i id="1014" class="fas fa-check"></i></button>
+                                    <button title="Eliminar tarea"><i id="1014" class="fas fa-trash"></i></button>
                                 </div>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <div class="tarea">
-                                <div class="descripcion-tarea">
-                                    descripcion tarea
+                            <div class="tarea" id="tarea1015">
+                                <div class="descripcion-tarea" >
+                                    descripcion tarea dos
                                 </div>
-                                <div class="btns-tarea">                                      
-                                    <button title="Eliminar tarea"><i class="fas fa-times"></i></button>
+                                <div class="btns-tarea">       
+                                    <button title="Marcar como completada"><i id="1015" class="fas fa-check"></i></button>                               
+                                    <button title="Eliminar tarea"><i id="1015" class="fas fa-trash"></i></button>
                                 </div>
                             </div>
                         </td>
